demo/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  type: ExternalName
  externalName: control-theory.espinosa.io
