demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  selector:
    name: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
